--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>NUESTRO BAUTIZO CUMPLE LUCA Y LIAM LINO</title>
+    <title>NUESTRO BAUTIZO CUMPLE LUCCA Y LIAM LINO</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -416,4 +416,5 @@
       setInterval(updateCountdown, MILLISECONDS_OF_A_SECOND);
     });
   </script>
+
 </html>
