--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <label class="custom-label">Confirmación de asistencia</label>
       <div class="container text-center mt-2 bounce-top">
         <a 
-          href="https://api.whatsapp.com/send?phone=+5535077828&text=Claro%20que%20asistir%C3%A9%20al%20bautizo%20cumple%20de%20Lucca%20&%20Liam%20%F0%9F%8E%89%20"
+          href="https://api.whatsapp.com/send?phone=+5535077828&text=Claro%20que%20asistir%C3%A9%20al%20bautizo%20cumple%20de%20Lucca%20&%20Liam%F0%9F%8E%89%20"
           class="btn btn-custom2">
           <p>REGISTRO</p></a>
       </div>
@@ -418,3 +418,4 @@
   </script>
 
 </html>
+
