--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <p>Oscar Ignacio Lino Colin</p>
         <label class="custom-label">Liam</label>
         <p>María de los Ángeles Lino Colin</p>
-        <p>Ignacio Lino Colin</p>
+        <p>Juan Ignacio Lino Colin</p>
         <br>
         <br>
         <label class="custom-label">Faltan ... </label>
@@ -313,6 +313,7 @@
       <label class="custom-label">Recepción</label>
       <p>7:30 p.m.</p>
       <p>Salón Lago Baikal, calle de los purepechas 777</p>
+      <p>La cena sera a las 9:00 p.m.</p>
       <div class="container text-center mt-2 bounce-top">
         <a 
           href="https://maps.app.goo.gl/QSPehpQdpS9w7N4NA"
@@ -418,6 +419,7 @@
   </script>
 
 </html>
+
 
 
 
