--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       <label class="custom-label">Recepción</label>
       <p>7:30 p.m.</p>
       <p>Salón Lago Baikal, calle de los purepechas 777</p>
-      <p>La cena sera a las 9:00 p.m.</p>
+      <p>La cena será a las 9:00 p.m.</p>
       <div class="container text-center mt-2 bounce-top">
         <a 
           href="https://maps.app.goo.gl/QSPehpQdpS9w7N4NA"
@@ -419,6 +419,7 @@
   </script>
 
 </html>
+
 
 
 
