--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
         padding: 0;
       }
 
-      .image_sobre {
+       .image_sobre {
        position: relative;
-       width: 100%;
-       top: 25%;
+       width: 40%;
+       height: 50%;
+       top: 20%;
        right: 0;
        left: 0;
        margin: 0 auto;
@@ -347,18 +348,17 @@
     </div>
 </div>
     </div>
-    <!--<div class="col-12" style="margin-top: 30px;">
-      <label class="custom-label">Opciones de regalo</label>
+   <div class="col-12" style="margin-top: 30px;">
+      <label class="custom-label">Mesa de Regalos</label>
       <div class="container text-center mt-3 bounce-top">
         <p>Mi mejor regalo es compartir contigo este gran día</p>
         <p>Si deseas obsequiarme algo, puedo sugerir la siguiente opción:</p>
-        <div class="texto-con-icono">
-          <img src="images/icono.png" alt="Icono" class="image_sobre">
-        </div>
-        <p><b>¡LLUVIA DE SOBRES!</b></p>
       </div>
-    </div>-->
-    <div class="col-12" style="margin-top: 30px;"></div>
+      <div class="col-12">
+          <img src="images/LIVER.png" alt="Icono" class="image_sobre" >
+        </div>
+        <p><b>N.Evento 51734193</b></p>
+    </div>
   </div>
 
   </body>
@@ -419,6 +419,7 @@
   </script>
 
 </html>
+
 
 
 
